Refactor App file for smooth deployment